--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 :focus { outline:none; }
-
+/*
 div.top-menu {
     background: #499bea;
     background: -moz-linear-gradient(-45deg, #499bea 0%, #798eea 100%);
@@ -11,13 +11,84 @@ div.top-menu {
     background: -o-linear-gradient(315deg, #499bea 0%, #798eea 100%);
     background: linear-gradient(135deg, #499bea 0%, #798eea 100%);
 }
-
+*/
 .form-group {
   margin-bottom: 15px!important;
 }
 
 h4 {
   margin-bottom: 15px!important;
+}
+
+i.icon {
+  margin-top: 0.7rem;
+  margin-left: 0.5rem;
+  font-size: 7rem;
+  width: 100%;
+  height: 100%;
+  transform: rotate(-30deg);
+}
+
+ol {
+  padding: 0;
+  margin: 0;
+}
+
+.hexagon {
+  display: inline-block;
+  position: relative;
+  z-index: 15;
+  width: 150px; 
+  height: 86.60px;
+  background-color: #ffffff;
+  /*margin: 43.30px 0;*/
+  box-shadow: 0 0 20px rgba(0,0,0,0.35);
+  border-left: solid 2px #000000;
+  border-right: solid 2px #000000;
+}
+
+ol { text-align: center; }
+
+ol.odd { margin: -4.2rem 0px; }
+
+.hexagon:before,
+.hexagon:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  width: 106.07px;
+  height: 106.07px;
+  -webkit-transform: scaleY(0.5774) rotate(-45deg);
+  -ms-transform: scaleY(0.5774) rotate(-45deg);
+  transform: scaleY(0.5774) rotate(-45deg);
+  background-color: inherit;
+  left: 19.9670px;
+  box-shadow: 0 0 20px rgba(0,0,0,0.35);
+}
+
+.hexagon:before {
+  top: -53.0330px;
+  border-top: solid 2.8284px #000000;
+  border-right: solid 2.8284px #000000;
+}
+
+.hexagon:after {
+  bottom: -53.0330px;
+  border-bottom: solid 2.8284px #000000;
+  border-left: solid 2.8284px #000000;
+}
+
+/*cover up extra shadows*/
+.hexagon span {
+  display: block;
+  position: absolute;
+  top:1.1547005383792515px;
+  left: 0;
+  width:146px;
+  height:84.2931px;
+  z-index: 2;
+  background: inherit;
+  text-align: center;
 }
 
 /* The switch - the box around the slider */
