--- a/res/inputs.css
+++ b/res/inputs.css
@@ -1,5 +1,5 @@
 .control {
-  display: block;
+  display: inline-block;
   position: relative;
   padding-left: 30px;
   margin-bottom: 10px;
@@ -12,8 +12,8 @@
 }
 .control__indicator {
   position: absolute;
-  top: 0px;
-  left: 0;
+  top: 5px;
+  left: 4px;
   height: 16px;
   width: 16px;
   background: #fff;
@@ -64,8 +64,8 @@
   border-color: #7b7b7b;
 }
 .control--radio .control__indicator:after {
-  left: 5px;
-  top: 5px;
+  left: 4px;
+  top: 4px;
   height: 6px;
   width: 6px;
   border-radius: 50%;
